<resources>
    <string name="app_name">onlydate</string>
    <string name="show_temperature">Show Temperature</string>
    <string name="show_day_of_week">Show Day of Week</string>
    <string name="show_year">Show Year</string>
    <string name="settings_title">Widget Settings</string>
    <string name="appearance_section">Appearance</string>
    <string name="display_section">Display Options</string>
    <string name="language_section">Language</string>
    <string name="text_color">Text Color</string>
    <string name="text_color_hint">#FFFFFF</string>
    <string name="background_color">Background Color</string>
    <string name="background_color_hint">#000000</string>
    <string name="background_opacity">Background Opacity</string>
    <string name="lang_system">System Default</string>
    <string name="lang_english">English</string>
    <string name="lang_japanese">Japanese</string>
    <string name="date_text_size">Date Text Size</string>
    <string name="day_text_size">Day of Week Text Size</string>
    <string name="temp_text_size">Temperature Text Size</string>
    <string name="text_size_sp">%d sp</string>
    <string name="layout_section">Layout</string>
    <string name="layout_horizontal">Horizontal (One Row)</string>
    <string name="layout_two_rows_temp">2 Rows (Temp Bottom)</string>
    <string name="layout_two_rows_weekday_temp">2 Rows (Weekday + Temp Bottom)</string>
    <string name="layout_three_rows">Vertical (3 Rows)</string>
</resources>